--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
+    <title>İsmail Seren | is76myl </title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
+    <link rel="icon" href="" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
@@ -22,14 +22,14 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="https://i.hizliresim.com/qttye7l.jpg" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
           <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+            <img src="hhttps://i.hizliresim.com/qttye7l.jpg" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
@@ -40,27 +40,27 @@
     </div>
 
     <div id="userName">
-      @johnggli
+      @is76myl
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
+      <a class="link" href="https://github.com/skripy" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
+      <a class="link" href="https://open.spotify.com/user/azav23xyizu14fjzpwi1ruvym?si=c041b1d7ba5247a7" target="_blank">
+        <i class="fab fa-spotify">&nbsp;</i>Spotify
       </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
+      <a class="link" href="https://skripy.cloud" target="_blank">
+        <i class="fab fa-skripy">&nbsp;</i>Skripy - Kendi yazılımalrım-blog
       </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
+      <a class="link" href="https://www.instagram.com/is76myl" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
+      <a class="link" href="https://debis.skripy.cloud" target="_blank">
+        <i class="fab fa-debis">&nbsp;</i>Deprem Analiz Bilgi Sistemi
       </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
+      <a class="link" href="https://patreon.com/skripy target="_blank">
+        <i class="fa fa-play-circle">&nbsp;</i>Patreon
       </a>
     </div>
 
