--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <i class="fab fa-spotify">&nbsp;</i>Spotify
       </a>
       <a class="link" href="https://skripy.cloud" target="_blank">
-        <i class="fab fa-skripy">&nbsp;</i>Skripy - Kendi yazılımalrım-blog
+        <i class="fab fa-skripy">&nbsp;</i>Skripy - Kendi yazılımlarım - blog
       </a>
       <a class="link" href="https://www.instagram.com/is76myl" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>Instagram
@@ -59,13 +59,13 @@
       <a class="link" href="https://debis.skripy.cloud" target="_blank">
         <i class="fab fa-debis">&nbsp;</i>Deprem Analiz Bilgi Sistemi
       </a>
-      <a class="link" href="https://patreon.com/skripy target="_blank">
+      <a class="link" href="https://patreon.com/skripy"_blank">
         <i class="fa fa-play-circle">&nbsp;</i>Patreon
       </a>
     </div>
 
     <div id="hashtag">
-      #BeHappy❤
+      İsmail Şeren tarafından yapıldı
     </div>
   </body>
 </html>
